Things work now, just working on getting the data from the form into the server.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   </head>
   <body>
-        <div class="jumbotron">
+        <div class="jumbotron m-3 bg-info text-light">
             <h1 class="display-4">FriendFinder</h1>
             <p class="lead">Need more friends? Take our quick and easy survey to be matched with a friend from our database.</p>
-            <hr class="my-4">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Take The Survey</a>
+            <hr class="my-4 bg-light">
+            <a class="btn btn-primary btn-lg" href="./survey" role="button">Take The Survey</a>
         </div>
       
     <!-- Optional JavaScript -->
