--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -54,7 +54,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question1">Question 1</label>
             <select class="form-control" id="question1">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -65,7 +65,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question2">Question 2</label>
             <select class="form-control" id="question2">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -76,7 +76,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question3">Question 3</label>
             <select class="form-control" id="question3">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -87,7 +87,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question4">Question 4</label>
             <select class="form-control" id="question4">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -98,7 +98,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question5">Question 5</label>
             <select class="form-control" id="question5">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -109,7 +109,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question6">Question 6</label>
             <select class="form-control" id="question6">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -120,7 +120,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question7">Question 7</label>
             <select class="form-control" id="question7">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -131,7 +131,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question8">Question 8</label>
             <select class="form-control" id="question8">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -142,7 +142,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question9">Question 9</label>
             <select class="form-control" id="question9">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -153,7 +153,7 @@ You feel more energetic after spending time with a group of people. -->
           <div class="form-group">
             <label for="question10">Question 10</label>
             <select class="form-control" id="question10">
-              <option selected>Choose...</option>
+              <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -165,12 +165,85 @@ You feel more energetic after spending time with a group of people. -->
           </div>
         </form>
       </div>
-      <a class="btn btn-dark btn-lg w-100 my-auto" href="./api/friends" role="button">Submit</a>
+      <a class="btn btn-dark btn-lg w-100 my-auto" role="button" id="submit">Submit</a>
     </div>
-    <!-- Optional JavaScript -->
+    <!-- Modal -->
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Your Best Match</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h2 id="match-name"></h2>
+              <img id="match-photo" src="" alt="match photo">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- Bootstrap JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <!-- Submission JavaScript -->
+    <script>
+      $('#submit').on('click', function(event) {
+        event.preventDefault();
+
+          // Form validation: Require all fields to be filled
+          function validateForm() {
+            var isValid = true;
+            $(".form-control").each(function() {
+              if ($(this).val() === "") {
+                isValid = false;
+              }
+            });
+            return isValid;
+          }
+
+          // If validation passes
+          if (validateForm()) {
+            // Create an object of the user's data
+            var userData = {
+              name: $("#name").val().trim(),
+              photo: $("#photo").val().trim(),
+              scores: [
+                $("#question1").val(),
+                $("#question2").val(),
+                $("#question3").val(),
+                $("#question4").val(),
+                $("#question5").val(),
+                $("#question6").val(),
+                $("#question7").val(),
+                $("#question8").val(),
+                $("#question9").val(),
+                $("#question10").val()
+              ]
+            };
+
+            // AJAX post the data to the friends API.
+            $.post("/api/friends", userData, function(data) {
+
+              // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+              $("#match-name").text(data.name);
+              $("#match-photo").attr("src", data.photo);
+
+              // Show the modal with the best match
+              $("#results-modal").modal("toggle");
+
+            });
+          } 
+          else {
+            alert("Please fill out all fields before submitting!");
+          }
+      });
+    </script>
   </body>
 </html>
