--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,29 +1,3 @@
-<!-- Questions:  -->
-
-<!-- 1. I like to know what is expected of me.
-2. I need to be free to be myself, not follow other people's rules.
-3. I like to make descisions together as a group.
-4. I am usually the smartest person in the room.
-5. I like hugs.
-6. I like chatting with my friends.
-7. I like diagrams and pictures.
-8. I prefer people to animals
-9. I feel energized after spending time with people.
-10. I   -->
-
-
-<!-- Your mind is always buzzing with unexplored ideas and plans.
-Generally speaking, you rely more on your experience than your imagination.
-You find it easy to stay relaxed and focused even when there is some pressure.
-You rarely do something just out of sheer curiosity.
-People can rarely upset you.
-It is often difficult for you to relate to other people’s feelings.
-In a discussion, truth should be more important than people’s sensitivities.
-You rarely get carried away by fantasies and ideas.
-You think that everyone’s views should be respected regardless of whether they are supported by facts or not.
-You feel more energetic after spending time with a group of people. -->
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -52,7 +26,7 @@ You feel more energetic after spending time with a group of people. -->
       <hr class="my-4 bg-light">
       <div class="ml-5 w-50">
           <div class="form-group">
-            <label for="question1">Question 1</label>
+            <label for="question1">1. You're great at multitasking</label>
             <select class="form-control" id="question1">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -63,7 +37,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question2">Question 2</label>
+            <label for="question2">2. You enjoy swimming and being in the water</label>
             <select class="form-control" id="question2">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -74,7 +48,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question3">Question 3</label>
+            <label for="question3">3. You'd rather be unique than "normal"</label>
             <select class="form-control" id="question3">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -85,7 +59,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question4">Question 4</label>
+            <label for="question4">4. You like to bask in the sun</label>
             <select class="form-control" id="question4">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -96,7 +70,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question5">Question 5</label>
+            <label for="question5">5. People often find you intimidating</label>
             <select class="form-control" id="question5">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -107,7 +81,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question6">Question 6</label>
+            <label for="question6">6. Your puppy-dog-eyes are very effective</label>
             <select class="form-control" id="question6">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -118,7 +92,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question7">Question 7</label>
+            <label for="question7">7. You keep people at a distance with your natural armor</label>
             <select class="form-control" id="question7">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -129,7 +103,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question8">Question 8</label>
+            <label for="question8">8. You get lots of hugs and snuggles</label>
             <select class="form-control" id="question8">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -140,7 +114,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question9">Question 9</label>
+            <label for="question9">9. You have an adventurous palate</label>
             <select class="form-control" id="question9">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -151,7 +125,7 @@ You feel more energetic after spending time with a group of people. -->
             </select>
           </div>
           <div class="form-group">
-            <label for="question10">Question 10</label>
+            <label for="question10">10. You're more of a night owl than an early bird</label>
             <select class="form-control" id="question10">
               <option selected value="">Choose...</option>
               <option value="1">1 (Strongly Disagree)</option>
@@ -179,7 +153,7 @@ You feel more energetic after spending time with a group of people. -->
             </div>
             <div class="modal-body">
               <h2 id="match-name"></h2>
-              <img id="match-photo" src="" alt="match photo">
+              <img class="w-100" id="match-photo" src="" alt="match photo">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -189,7 +163,7 @@ You feel more energetic after spending time with a group of people. -->
       </div>
     <!-- Bootstrap JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Form Submission JavaScript -->
