Updated some comments and removed some unused references.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,6 +24,7 @@
           <input type="text" class="form-control" id="photo" placeholder="Please paste a link to a photo of you here...">
         </div>
       <hr class="my-4 bg-light">
+      <!-- Questions list -->
       <div class="ml-5 w-50">
           <div class="form-group">
             <label for="question1">1. You're great at multitasking</label>
